[package]
name = "binary-tree"
version = "0.1.0"
edition = "2021"
include = [
  "src/**/*",
  "Cargo.toml", 
  "README.md",  
  "LICENSE"
]
homepage = "https://github.com/enosuity/persist-linked-list"
description = "A simple binary tree view representation"
repository = "https://github.com/enosuity/persist-linked-list"
keywords = [
  "binary",
  "binary-tree", 
  "tree",
  "binary-tree-view",
  "binary-tree-structure"
]
categories = ["binary-tree", "binary-tree-rust"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["Btree"]
Btree = []
